# django-llama2-chat-pdf

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  test_python.yaml
deploy/: configure_ubuntu.sh
server/: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  server.py
server/accounts/: admin.py  models.py
server/accounts/migrations/: 0001_initial.py
server/accounts/tests/: test_admin.py  test_models.py
server/chat/: admin.py  apis.py  conftest.py  enums.py  models.py  router.py  schemas.py  services.py  singleton.py  urls.py  views.py
server/chat/apis/: chat.py  chroma.py  conversation.py
server/chat/management/commands/: gen_dummy_data.py
server/chat/migrations/: 0001_initial.py  0002_alter_documentfile_sha256.py  0002_alter_message_message_type.py  0002_alter_message_options.py  0002_documentfile_original_name.py  0003_alter_documentfile_file.py
server/chat/static/chat/js/: chat.js
server/chat/templates/: chat_and_upload.html
server/chat/templates/chat/: chat_and_upload.html  chatroom_list.html  pdf_view.html  text_file_view.html
server/chat/tests/: test_apis_chat.py  test_services.py
server/chat/tests/data/: generate_test_data.py  mega_corp_alpha_manifesto.py
server/chat/views/: chat.py  room_list.py
server/client/: package.json
server/client/openapi/: openapi.json
server/client/src/: App.tsx
server/client/src/__generated__/: ReactClient.ts  index.ts
server/client/src/__generated__/chat/: openapi.ts
server/client/src/__generated__/models/: DocumentFileSchema.ts  Message.ts  MessageType.ts
server/client/src/__generated__/services/: ChatService.ts  ChromaService.ts
server/client/src/components/: ChatArea.tsx  ChatUI.tsx  MockData.ts  SideBar.tsx
server/data/qdrant_storage/: raft_state
server/jupyternotebooks/: README.md  TriageEmbeddings.ipynb  TriageLLMStream.ipynb  requirements.txt
server/server/: apis.py  asgi.py  auth.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
server/server/templates/: base.html
server/server/templates/registration/: login.html
server/server/templates/server/: home.html
server/server/tests/: test_auth.py
