[tool.poetry]
name = "django-llama2-reactjs-chat-pdf"
version = "0.1.0"
description = ""
authors = ["Piotr Gryko <piotr.gryko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.*" # Locked due to chromadb
replicate = "^0.10.0"
uvicorn = "^0.23.2"
faiss-cpu = "^1.7.4"
chromadb = "^0.4.5"
langchain = "^0.0.252"
pypdf = "^3.14.0"
tiktoken = "^0.4.0"
django = "^4.2.4"
django-ninja = "^0.22.2"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
django-pytest = "^0.2.0"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
daphne = "^4.0.0"
httpx = "^0.24.1"
structlog = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"
ruff = "^0.0.282"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
