[tool.poetry]
name = "django-llama2-reactjs-chat-pdf"
version = "0.1.0"
description = ""
authors = ["Piotr Gryko <piotr.gryko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.*" # Locked due to chromadb
replicate = "^0.10.0"
uvicorn = "^0.23.2"
faiss-cpu = "^1.7.4"
langchain = "^0.0.252"
pypdf = "^3.15.1"
tiktoken = "^0.4.0"
django = "^4.2.4"
django-ninja = "^0.22.2"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
daphne = "^4.0.0"
httpx = "^0.24.1"
structlog = "^23.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
chromadb = "^0.4.6"
channels = "^4.0.0"
dj-database-url = "^2.1.0"
psycopg = "^3.1.10"
sentry-sdk = "^1.30.0"
structlog-sentry = "^2.0.3"
spacy = "^3.6.1"
python-magic = "^0.4.27"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"



[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"
ruff = "^0.0.282"
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
django-extensions = "^3.2.3"
pytest-asyncio = "^0.21.1"
pytest-django = "^4.5.2"
werkzeug = "^2.3.7"
pytest-xdist = "^3.3.1"
pip-licenses = "^4.3.2"
jupyterlab = "^4.0.5"
djlint = "^1.32.1"
watchfiles = "^0.20.0"
jupyter = "^1.0.0"
notebook = "6.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "**/node_modules/**",
    "venv",
    ".venv",
    "**/migrations/**"
]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
exclude = '''
/(
  | migrations
  | snapshots
  | \.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = "*/{migrations,snapshots}/*.py"

[tool.coverage.run]
omit = [
  "**/__init__.py",
  "**/tests/**",
  "**/tests.py",
  "**/migrations/**",
  "**/fixtures/**",
  "**/admin/**",
  "**/manage.py",
  "**/settings/**",
  "**/settings.py",
  "**/asgi.py",
  "**/wsgi.py",
]